--- a/uj/zajecia/24-25l/mkmb/class/1/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/1/index.html
@@ -167,6 +167,15 @@
 <h2 class="homework">숙제</h2>
 
 <p>15. 또한 우리나라 청소년들이 OECD 국가 중 가장 많이 사용하는 것으로 나타났다.</p>
+<ul>
+	<li>In addition, it was found that Korean teenagers use smartphones the most among OECD countries.</li>
+	<li>In addition, it was revealed that Korean teenagers use smartphones the most out of the OECD countries.</li>
+	<li>It also appears that among OECD countries Korean teenagers use smartphones the most.</li>
+	<li>Also, they found that the using time of Korean teenager is the most among OECD.</li>
+	<li>Also, it was presented that Korean youth use it the most among the OECD countries.</li>
+	<li>Also, it was shown that Korean teenagers use it the most among OECD countries.</li>
+	<li>Additionally, it shows that the Korean teenagers' smartphone use time is the highest among OECD countries.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -185,8 +194,35 @@
 <h3>번역</h3>
 
 <p>16. 스마트폰 사용 시간이 늘어날수록 스마트폰 중독 위험도 높아진다.</p>
+<ul>
+	<li>The higher the smartphone usage time, the higher the risk of smartphone addiction.</li>
+	<li>The longer a smartphone is used, the higher the risk of smartphone addiction gets.</li>
+	<li>Moreover, the longer they use them, the risk of addiction becomes higher, too.</li>
+	<li>As smartphone usage time increases, the risk of smartphone addiction also rises.</li>
+	<li>The higher is the smartphone usage, the higer is the risk of the addiction.</li>
+	<li>The more time spent using smartphones increases, the higher the risk of smartphone addiction gets.</li>
+	<li>The higher the smartphone use time, the bigger is the risk of smartphone addiction.</li>
+</ul>
 <p>17. 본 연구 결과를 보면 스마트폰 중독 청소년은 남자 40.3%, 여자 46.3%로 나타났다.</p>
+<ul>
+	<li>According to the results of this study, 40.3% of boys and 46.3% of girls are addicted to smartphones.</li>
+	<li>Based on this research results, it was revealed that 40.3% of male and 46.3% of female teenagers are addicted to smartphones.</li>
+	<li>According to the results of the study, 40.3% of boys and 46.3% of girls are addicted to smartphones.</li>
+	<li>According to the results of this study, 40.3% of male teenagers and 46.3% of female teenagers are addicted to smartphones.</li>
+	<li>According to the results of the study 40.3% of teenage males and 46.4% of teenage females are addicted to smartphones.</li>
+	<li>According to the study 40.3% of male teenagers and 46.3% of female teenagers are addicted to smartphones.</li>
+	<li>The result of this research shows that 40,3% of teenage boys and 46,3% of girls are addicted to smartphones.</li>
+</ul>
 <p>18. 다시 말해, 청소년 2명 중 1명은 스마트폰 중독 상태에 있는 것을 의미한다.</p>
+<ul>
+	<li>In other words, 1 out of every 2 teenagers deals with smartphone addiction.</li>
+	<li>In other words, it means that one in two teenagers is addicted to smartphones.</li>
+	<li>In other words, it means that one out of two teenagers is addicted.</li>
+	<li>In other words, It means that one in two teenagers is in the state of smartphone addiction.</li>
+	<li>In other words, it means that one out of two teenagers is in a smartphone addiction stage.</li>
+	<li>In other words, it means that one in two teenagers is in the state of smartphone addiction.</li>
+	<li>In other words, it means one in two teenagers is addicted to smartphones.</li>
+</ul>
 
 <hr class="homework">
 
@@ -216,7 +252,7 @@
 
 <h3>번역</h3>
 
-<p>23-1. 우리나라 청소년은 수면 시간이 부족할뿐 아니라 수면의 질도 나빠</p>
+<p>23-1. 우리나라 청소년은 수면 시간이 부족할 뿐 아니라 수면의 질도 나빠</p>
 <p>23-2. 수면 장애를 경험하고 있는 것으로 나타났다.</p>
 <p>24-1. 청소년 2명 중 1명이 수면 장애를 겪으며</p>
 <p>24-2. 스마트폰 중독 집단이 더 큰 어려움을 경험하는 것으로 나타났다.</p>
