--- a/uj/zajecia/24-25l/mkmb/class/2/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/2/index.html
@@ -226,13 +226,101 @@
 <h3>번역</h3>
 
 <p>17. 인사의 시기:</p>
+<ul>
+	<li>Timing of a greeting:</li>
+	<li>Opportunity to greet</li>
+	<li>Time of greeting:</li>
+	<li>Timing of the greeting:</li>
+	<li>Timing of greeting</li>
+	<li>Time of the greeting:</li>
+	<li>The timing of greetings</li>
+	<li>Moment of greeting:</li>
+	<li>The Timing of Greeting:</li>
+</ul>
 <p>18. 일반적으로 30보 이내(인사대상과 방향이 다를 때)</p>
+<ul>
+	<li>Generally within 30 steps (when the direction is different from the recipient’s).</li>
+	<li>Normally within 30 steps (when the person we want to greet is in a different direction)</li>
+	<li>Normally, within 30 steps (when the direction of recipient of greeting is different than yours)</li>
+	<li>Generally, within 30 steps (when heading in a different direction than the other person)</li>
+	<li>Generally within 30 steps (in case of different direction from the person who you have to greet)</li>
+	<li>Generally within 30 steps ( when the direction is diffrent than the recipient of the greeting)</li>
+	<li>Generally, within 30 steps (When the direction is opposite of the recipient)</li>
+	<li>In general, greet within 30 steps (when you’re walking in different directions)</li>
+	<li>Generally, within 30 steps (if direction of the other person is different)</li>
+</ul>
 <p>19. 가장 좋은 시기는 6보(인사대상과 방향이 마주 칠 때)</p>
+<ul>
+	<li>The best time is 6 steps (when the recipient is heading in same direction).</li>
+	<li>The best opportunity is 6 steps away (when the person we want to greet is the same direction as we are)</li>
+	<li>The best time is 6 steps (when the direction of recipient of greeting is the same as yours)</li>
+	<li>The best moment is within 6 steps (when facing the other person directly)</li>
+	<li>The perfect timing is within 6 steps (in case of when you meet the person you have to greet)</li>
+	<li>The best time is 6 steps ( when the recipient is in the same direction)</li>
+	<li>Best timing is around 6 steps, (When facing each other)</li>
+	<li>The ideal moment is to greet within 6 steps (when you’re facing other person directly)</li>
+	<li>The best timing is within 6 steps (if the direction of the other person is same)</li>
+</ul>
 <p>20. 측방이나 갑자기 만났을 때에는 즉시</p>
+<ul>
+	<li>When you meet someone from the side or unexpectedly greet them promptly.</li>
+	<li>If they suddenly are right before us, we greet immediately</li>
+	<li>Immediately when meeting right next to somebody or suddenly.</li>
+	<li>Immediately when you run into the someone unexpectedly</li>
+	<li>if you encounter someone from the side or unexpectedly, greet them immediately</li>
+	<li>When you meet on the side or out of the blue</li>
+	<li>When encountering from the side or suddenly, immediately.</li>
+	<li>If you run into someone unexpectedly, greet them right away.</li>
+	<li>When the other person appears from the side or unexpectedly, then immediately greet them</li>
+</ul>
 <p>21-1. 상사를 사외 인사와 함께 복도에서 만났을 경우에는</p>
+<ul>
+	<li>If you meet your boss accompanied by a company outsider in the hallway,</li>
+	<li>When we meet someone/boss outside of the hallway</li>
+	<li>In case of meeting boss with the person from outside of the office in the hallway</li>
+	<li>If you meet your superior in the corridor along with a guest from outside the company</li>
+	<li>When you meet your superior with visitor in the passage</li>
+	<li>Your boss outside of the office in the hallway</li>
+	<li>In the case of meeting your boss with a person outside your company in the corridor,</li>
+	<li>When you meet a superior with a person outside of work in a hallway</li>
+	<li>In case you meet your superior with someone in a hallway</li>
+</ul>
 <p>21-2. 멈추어 서서 정중하게 인사를 합니다.</p>
+<ul>
+	<li>stop and greet them politely.</li>
+	<li>we stop and politely greet them.</li>
+	<li>stop and greet politely.</li>
+	<li>stop and greet them politely.</li>
+	<li>Stop and greet politely</li>
+	<li>Stop and greet them politely.</li>
+	<li>Stop and greet them politely.</li>
+	<li>stop walking and greet them politely.</li>
+	<li>Stop and politely greet them.</li>
+</ul>
 <p>22-1. 복도에서 상사를 만났을 경우에는 걸음을 멈출 필요가 없으며</p>
+<ul>
+	<li>If you meet your boss in the hallway, you don't have to stop walking</li>
+	<li>In case of a meeting the person/boss in a hallway we don't need to stop</li>
+	<li>In case of meeting boss in the hallway, you don’t need to stop and</li>
+	<li>If you meet your superior in the corridor, there is no need to stop walking,</li>
+	<li>When you meet your superior in the passage, you don’t need to stop walking</li>
+	<li>If you meet your boss in the hallway there is no need to stop</li>
+	<li>It is not necessary to stop in the case of meeting your boss in the corridor.</li>
+	<li>If you meet a superior in a hallway, you don’t need to stop,</li>
+	<li>There is no need to stop walking in case of meeting your superior in a hallway</li>
+</ul>
 <p>22-2. 한쪽 옆으로 비키며 가볍게 인사를 합니다.</p>
+<ul>
+	<li>move aside and give a brief greeting.</li>
+	<li>We step aside a little and lightly greet them.</li>
+	<li>step to one side and greet lightly.</li>
+	<li>just step aside and greet them in a simple manner.</li>
+	<li>Step aside and greet lightly</li>
+	<li>move to the side and greet them lightly.</li>
+	<li>Lightly move to one side and greet them.</li>
+	<li>step to the side and give a polite greeting</li>
+	<li>Just move to one side and lightly greet them.</li>
+</ul>
 
 <hr class="homework">
 
