--- a/uj/zajecia/24-25l/mkmb/class/3/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/3/index.html
@@ -175,6 +175,8 @@
 <p>19-1. 업계에 따르면 삼성전자는 올 연말까지 해외 계열사를 중심으로</p>
 <p>19-2. 최대 30% 인력 감축에 돌입할 것으로 알려졌습니다.</p>
 
+<h2 class="homework">숙제</h2>
+
 <h3>어휘</h3>
 
 <ul>
@@ -194,12 +196,51 @@
 <h3>번역</h3>
 
 <p>20. 구조조정이 쉽지만은 않습니다.</p>
+<ul>
+	<li>Structure adjustment is not easy. </li>
+	<li>Restructuring is not easy.</li>
+	<li>Restructuring is not easy.</li>
+	<li>Restructuring is not easy.</li>
+	<li>Restructuring isn't easy.</li>
+	<li>Restructuring is not easy.</li>
+	<li>The structure adjustment is not easy.</li>
+</ul>
 <p>21-1. 회사에서 버티려고 하는 직원들을 강제적으로 내보낼 수 없다 보니,</p>
-<p>22-2. 파격적인 퇴직 위로금을 내건 기업마저 나오고 있습니다.</p>
-<p>23. SK텔레콤이 대표적입니다.</p>
-<p>24-1. 이 회사는 최근 만 50세 이상 직원들 중 퇴직을 할 경우</p>
-<p>24-2. 기본 퇴직금 외에 1인당 최대 3억원의 위로금을 주기로 하면서</p>
-<p>24-3. 큰 화제가 됐습니다.</p>
+<ul>
+	<li>Since they cannot forcefully fire employees who are trying to hold out in company,</li>
+	<li>Since the employees who are holding out in the company cannot be forcibly dismissed,</li>
+	<li>Because company can not forcibly lay off employees who are determined saty </li>
+	<li>In companies as employees who are holding out and can’t be forced out,</li>
+	<li>There are companies which forcibly held out their employees because they couldn't fire them,</li>
+	<li>Since employees, who are trying to stay at companies, cannot be forcibly dismissed,</li>
+	<li>Since it’s not possible to forcefully fire employees who want to hold on at the company,</li>
+</ul>
+<p>21-2. 파격적인 퇴직 위로금을 내건 기업마저 나오고 있습니다.</p>
+<ul>
+	<li>some companies even offer generous retirement compensation.</li>
+	<li>there are even companies that offered enormous retirement compensations. </li>
+	<li>Even some company is to issue offering shocking amount of compensation for retiring</li>
+	<li>exceptional retirment compensation are coming out.</li>
+	<li>even companies that have paid shocking amounts of retirement compensations, are coming out.</li>
+	<li>some companies have even started offering shocking retirement compensation.</li>
+	<li>Even companies offering shocking retirement compensations are emerging.</li>
+</ul>
+<p>22. SK텔레콤이 대표적입니다.</p>
+<ul>
+	<li>SK Telecom is a representative example.</li>
+	<li>SK Telecom is one of them.</li>
+	<li>SK Telecom is the representative company.</li>
+	<li>SK Telecom is a representative.</li>
+	<li>SK Telecom is the representative here.</li>
+	<li>SK Telecom is a representative example.</li>
+	<li>SK Telecom is one representative example.</li>
+</ul>
+
+<hr class="homework">
+
+<p>23-1. 이 회사는 최근 만 50세 이상 직원들 중 퇴직을 할 경우</p>
+<p>23-2. 기본 퇴직금 외에 1인당 최대 3억원의 위로금을 주기로 하면서</p>
+<p>23-3. 큰 화제가 됐습니다.</p>
 
 <h2>Source:</h2>
 
