--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -136,8 +136,8 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="3">Class</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">인사말씀</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/4">사랑하는 계명 가족과 계명의 일원이 되신 신입생 여러분</a></td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
