--- a/uj/zajecia/24-25z/ljk4/index.html
+++ b/uj/zajecia/24-25z/ljk4/index.html
@@ -165,7 +165,7 @@
 			<tr>
 				<th scope="row">14</th>
 				<td>3 lutego 2025</td>
-				<td class="schedule-exam" colspan="2">Egzamin <nobr>(11.30–12.30, s. 1.01)</nobr></td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25z/ljk4/testy/4">Egzamin <nobr>(11.30–12.30, s. 1.01)</nobr></a></td>
 			</tr>
 		</tbody>
 	</table>
