--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -264,8 +264,8 @@
 				<th scope="row">14</th>
 				<td>31 stycznia 2025</td>
 				<td class="schedule-exam">Test końcowy <nobr>(8.30–9.30, s. 1.03)</nobr></td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">mobbing; motoryzacja</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25z/wats3-1/testy/4">"40년 된 에어컨, 낡은 선풍기가 전부…사장이 안 바꿔줘요"; 뒷좌석 어린이, 안전띠 안 매면 ‘치사율 5배’</a></td>
 			</tr>
 		</tbody>
 	</table>
