--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -297,8 +297,8 @@
 				<th scope="row">14</th>
 				<td>31 stycznia 2025</td>
 				<td class="schedule-exam">Test końcowy <nobr>(14.00–15.00, s. 1.01)</nobr></td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">kuchnia koreańska; dyplomacja</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25z/wats3-2/testy/4">털옷에 손 떨면서도 ‘얼죽아(얼어 죽어도 아메리카노)’; '수년간 北지령 받아'...'창원간첩단' 재판 오늘 시작</a></td>
 			</tr>
 		</tbody>
 	</table>
