--- a/viiilo/zajecia/25-26/jk2/index.html
+++ b/viiilo/zajecia/25-26/jk2/index.html
@@ -39,21 +39,22 @@
 			<tr>
 				<th scope="row">2</th>
 				<td>2025년 10월 8일</td>
-				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/2">1. 일곱 시에 시작해요</a></td>
+				<td class="schedule-lecture" colspan="2" rowspan="3"><a href="viiilo/zajecia/25-26/jk2/zajecia/1">7. 일곱 시에 시작해요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
 				<td>2025년 10월 15일</td>
 			</tr>
 			<tr>
-				<th scope="row">4</th>
-				<td>2025년 10월 22일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<th rowspan="2" scope="row">4</th>
+				<td rowspan="2">2025년 10월 22일</td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture" rowspan="2" colspan="2"><a href="viiilo/zajecia/25-26/jk2/zajecia/2">8. 날씨가 더워요?</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
 				<td>2025년 10월 29일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
