--- a/viiilo/zajecia/25-26/jk2/zajecia/2/index.html
+++ b/viiilo/zajecia/25-26/jk2/zajecia/2/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" media="print" href="viiilo/.res/print.css">
 </head><body class="home">
 
-<h1>한국어 3급<br><br>7과. 일곱 시에 시작해요</h1>
+<h1>한국어 3급<br><br>8과. 날씨가 더워요?</h1>
 
 <h2>교과서</h2>
 
@@ -19,19 +19,19 @@
 	<li>
 		<div>1번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_S_1A_07_1.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_S_1A_08_1.mp3"></audio>
 		</div>
 	</li>
 	<li>
 		<div>2번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_S_1A_07_2.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_S_1A_08_2.mp3"></audio>
 		</div>
 	</li>
 	<li>
 		<div>3번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_S_1A_07_3.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_S_1A_08_3.mp3"></audio>
 		</div>
 	</li>
 </ul>
@@ -42,31 +42,31 @@
 	<li>
 		<div>1번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_W_1A_07_1.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_W_1A_08_1.mp3"></audio>
 		</div>
 	</li>
 	<li>
 		<div>2번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_W_1A_07_2.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_W_1A_08_2.mp3"></audio>
 		</div>
 	</li>
 	<li>
 		<div>3번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_W_1A_07_3.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_W_1A_08_3.mp3"></audio>
 		</div>
 	</li>
 	<li>
 		<div>4번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_W_1A_07_4.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_W_1A_08_4.mp3"></audio>
 		</div>
 	</li>
 	<li>
 		<div>4번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_W_1A_07_5.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_W_1A_08_5.mp3"></audio>
 		</div>
 	</li>
 </ul>
@@ -77,7 +77,7 @@
 	<li>
 		<div>1번 듣기</div>
 		<div>
-			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_E_1A_07_1.mp3"></audio>
+			<audio controls src="viiilo/zajecia/25-26/jk2/pliki/SJ_E_1A_08_1.mp3"></audio>
 		</div>
 	</li>
 </ul>
